--- a/README.Rmd
+++ b/README.Rmd
@@ -24,30 +24,19 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 ### Fechas `r ji("calendar")`
 
-El curso se dictará del **2 al 26 de agosto de 2021**. La modalidad de cursada será 100% virtual, con un 60% de clases "teóricas" asincrónicas y un 40% de clases prácticas y de consulta sincrónicas.
+El curso se dictará del **28 de julio al al 30 de agosto de 2022**. La modalidad de cursada será bimodal, con, con clases "teóricas" a distancia asincrónicas y un clases prácticas y de consulta presenciales en el [campus de la UNQ](https://goo.gl/maps/AWHxftehkFWHwWHCA) a distancia sincrónicas.
 
 ### Inscripción `r ji("file")`
 
-Si sos estudiante de doctorado de la UNQ te podés anotar a través del campus en la semana del 19 al 22 de junio.
+Si sos estudiante de doctorado de la UNQ te podés anotar a través del campus en la semana del 17 al 21 de junio.
 
 Si sos estudiante externo podés encontrar toda la información pertinente [acá](http://www.unq.edu.ar/cursos-posgrado/223-an%C3%A1lisis-estad%C3%ADstico-utilizando-r.php#n).
-
----
-**Importante**
-
-El curso tiene el cupo completo pero estamos gestionando una extensión. Si estás interesado en cursar te invitamos a que completes una [breve encuesta](https://forms.gle/kbDur1KXid17TsYZ7) así nos podemos poner en contacto con vos ante cualquier novedad.
----
 
 ## Bienvenidxs
 
 Bienvenidxs al repositorio de GitHub del curso de posgrado **Análisis estadístico utilizando R** de la Unversidad Nacional de Quilmes. Acá vas a encontrar las presentaciones, tutoriales, ejemplos y ejercicios del curso.
 
----
-**Antes de empezar**
-
-Si ya estás inscripto en el curso te invitamos a que completes esta [breve encuesta](https://forms.gle/kbDur1KXid17TsYZ7) que nos va a ayudar a conocer a la "audiencia" para que el curso salga lo mejor posible.
-También los invitamos a unirse al [espacio de trabajo del curso en Slack](https://join.slack.com/t/inferencia-r-unq/shared_invite/zt-tk0i9qo5-m0V4zDbukoA79_VZ0DcIbA). Es muy importante que si vas a hacer el curso estés en el grupo de Slack ya que es el medio que vamos a utilizar para comunicarnos. 
----
+> **Antes de empezar**  Si ya estás inscripto en el curso te invitamos a que completes esta [breve encuesta](https://forms.gle/kbDur1KXid17TsYZ7) que nos va a ayudar a conocer a la "audiencia" para que el curso salga lo mejor posible. También los invitamos a unirse al [espacio de trabajo del curso en Slack (en construcción)](https://www.youtube.com/watch?v=dQw4w9WgXcQ). Es muy importante que si vas a hacer el curso estés en el grupo de Slack ya que es el medio que vamos a utilizar para comunicarnos. 
 
 En este curso vamos a aprender a organizar, visualizar y modelar tus datos utilizando **R** para que puedas generar *pipelines* de análisis elegantes, seguros y reproducibles.
 
@@ -116,7 +105,9 @@ Git y los repositorios online (como GitHub o GitLab) son una herramienta poderos
 
 Antes de comenzar con el desarrollo del trabajo final lxs alumnxs deberán completar un examen escrito en el que se evaluarán los contenidos básicos del curso. El formato del mismo será una mezcla de multiple-choice y casos de estudio (por ejemplo, encontrar el error en la interpretación de un análisis estadístico).
 
-El trabajo final consistirá en aplicar los contenidos de la materia al análisis de datos propios o de alguna base de datos abiertos de un tema relacionado con la disciplina en la que se desarrolla el/la alumnx. De esta forma pretendemos cerrar la brecha entre los desarrollos teóricos y las aplicaciones prácticas de los contenidos, con todas las limitaciones que esto pudiera presentar.
+El trabajo final consistirá en aplicar los contenidos de la materia al análisis de datos propios o de alguna base de datos abiertos de un tema relacionado con la disciplina en la que se desarrolla el/la alumnx. De esta forma pretendemos cerrar la brecha entre los desarrollos teóricos y las aplicaciones prácticas de los contenidos, con todas las limitaciones que esto pudiera presentar. El mismo consistirá de una presentación escrita (en formato **Rmd**) y una presentación oral en la que deberán estar TODXS lxs miembros del grupo de trabajo. Asímismo, todos los grupos deberán estar presentes en las dos clases de consulta previas a la entrega.
+
+El trabajo final debe contener un análisis exploratorio de los datos, limpieza y detección de outliers, una visualización utilizando *{ggplot2}*`r ji("package")`, y un modelo lineal (normal o de efectos mixtos) que puede ser utilizado tanto en el contexto de un análisis exploratorio como (preferentemente) en un testeo de hipótesis. En ambos casos los resultados del modelado deben ser interpretados tanto estadísticamente como en el contexto de la pregunta y el tema de investigación a desarrollar.
 
 ## Donde ver las clases
 
