--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 ### Docentes `r ji("computer")`
 
-* Pablo Etchemendy (UNTreF/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "black")`](https://github.com/https://github.com/petcheme) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#black")`](https://twitter.com/petcheme)
+* Pablo Etchemendy (UNTreF/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "black")`](https://github.com/petcheme) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#black")`](https://twitter.com/petcheme)
 * Ignacio Spiousas (UNQ/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "#A42339")`](https://github.com/spiousas) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#A42339")`](https://twitter.com/Spiousas)
 
 ### Fechas `r ji("calendar")`
