--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -4,8 +4,7 @@ subtitle: "Julio/Agosto 2022"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::downcute:
-    html_document:
+    rmdformats::robobook: 
       includes:
         in_header: "favicon.html" 
 vignette: >
@@ -29,48 +28,48 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 ## Docentes `r ji("computer")`
 
-* Dr. Pablo Etchemendy (UNTreF/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "black")`](https://github.com/https://github.com/petcheme) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#black")`](https://twitter.com/petcheme)
-* Dr. Ignacio Spiousas (UNQ/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "#A42339")`](https://github.com/spiousas) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#A42339")`](https://twitter.com/Spiousas)
+* Pablo Etchemendy (UNTreF/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "#205e93")`](https://github.com/petcheme) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#205e93")`](https://twitter.com/petcheme)
+* Ignacio Spiousas (UNQ/Conicet) [`r icons::icon_style(icons::fontawesome("github"), fill = "#A42339")`](https://github.com/spiousas) [`r icons::icon_style(icons::fontawesome("twitter"), fill = "#A42339")`](https://twitter.com/Spiousas)
 
 ## Cronograma 📆
 
 | Semana | Clase | Título                                | Documento                                              | Vídeo                                           |
 | ------ | ----- | ------------------------------------- | :-------------------------------------------------------: | :-------------------------------------------: |
 | 0      | CA-1  | Introducción a R y Rstudio                     | No hay                             | [YouTube](https://www.youtube.com/watch?v=NOwcUHaqlyI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=1) |
-| 1      | CS-1  | Presentación del curso | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/Presentacion_curso/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=EfR9VmDnDIg&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=2) |
-| 1      | CA-1  | ¿Por qué R?                                    | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/2-1/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=SfQ9JF72GvI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=3) |
-| 1      | CA-2  | Bienvenidos al Tidyverse                        | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/2-2/Tidyverse_1.html) | [YouTube](https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4) |
-| 1      | CA-3  | El Tidyverse en acción                          | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/2-3/Tidyverse_2.html) | [YouTube](https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5) |
-| 1      | CA-4  | Visualización de datos: *A New Hope*            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/3-1/ggplot_1.html) | [YouTube](https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6) |
-| 1      | CA-5  | Visualización de datos: *Ggplot2 Strikes Back*  | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/3-2/ggplot_2.html) | [YouTube](https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7) |
-| 1      | CA-6  | Visualización de datos: *Return of the Ggplot2* | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/3-3/ggplot_3.html) | [YouTube](https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8) |
-| 1      | TP-1  | *tidyverse*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp1-tidyverse/tidyverse_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp1-tidyverse/tidyverse_TP_solved.html) | [CS-2 Parte 1](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) |
-| 1      | TP-2  | *ggplot2*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp2-ggplot2/ggplot2_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp2-ggplot2/ggplot2_TP_solved.html) | [CS-2 Parte 2](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) |
-| 1      | CA-7  | Variables Aleatorias 1: ¿Qué es una variable aleatoria?            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/4/1-Que_es_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=x6JxeKelBdc&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=11) |
-| 1      | CA-8  | Variables Aleatorias 2: Tipos de variables aleatorias       | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/4/2-Tipos_de_variables_aleatorias.pdf) | [YouTube](https://www.youtube.com/watch?v=Q6w_iehCLFs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=12) |
-| 1      | CA-9  | Variables Aleatorias 3: ¿Cómo se mide una variable aleatoria?               | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/4/3-Como_se_mide_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=yhYqr_cHoaQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=13) |
-| 1      | CA-10  | Variables Aleatorias 4-1: Distribución binomial     | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=ec-HextxRJ8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=14) |
-| 1      | CA-11  | Variables Aleatorias 4-2: Distribución uniforme                            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=7dfvFh-Gdaw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=15) |
-| 1      | CA-12  | Variables Aleatorias 4-3: La distribución Gaussiana (o normal)              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=UdunP_Epfec&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=16) |
-| 1      | TP-3  | Variables discretas y continuas | [Discretas](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp3-variables_discretas/variables_discretas.html) [Continuas](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp3-variables_discretas/variables_continuas.html) | [YouTube](https://www.youtube.com/watch?v=CFOAxG78H3A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=17) |
-| 2      | CA-13  | Exploración de datos                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/7-1/EDA_1.html) | [YouTube](https://www.youtube.com/watch?v=oPfr0X0qGG4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=18) |
-| 2      | CA-14  | Cómo detectar outliers y qué hacer con ellos              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/7-2/EDA_2.html) | [YouTube](https://www.youtube.com/watch?v=gwMIpYw_J5A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=19) |
-| 2      | TP-4  | Análisis exploratorio de datos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp4-EDA/EDA_TP.html) | [YouTube](https://www.youtube.com/watch?v=w-9xmWBb_R4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=24) |
-| 2      | CA-15  | Prueba de hipótesis 1                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=Yp12ptJ_luY&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=20) |
-| 2      | CA-16  | Prueba de hipótesis 2 - Para qué sirve? | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=LHZWAOwJ2gM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=21) |
-| 2      | CA-17  | Prueba de hipótesis 3 - Relación entre estadística crítica y nivel de significancia (alfa) | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=hhF9G-2uilQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=22) |
-| 2      | CA-18  | Prueba de hipótesis 4 - P-values | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=o4M96nLVn0A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=23) |
-| 2      | CA-19  | Prueba de hipótesis 5 - Potencia estadística | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=fpO0B7ZlHSE&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=25) |
-| 2      | CA-20  | Prueba de hipótesis 6 - Tamaño del efecto | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=EfL0o20VA-w&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=26) |
-| 3      | TP5  | Prueba de hipótesis | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp5-hipotesis/hipotesis.html)  | [YouTube](https://www.youtube.com/watch?v=bGkpOmXoOto&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=27) |
-| 3      | CA-21  | Modelos lineales 1 - Regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/10-1/linear_models_1.html) | [YouTube](https://www.youtube.com/watch?v=w6khKjCO1E0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=28) |
-| 3      | CA-22  | Modelos lineales 2 - Inferencia en regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/10-2/linear_models_2.html) | [YouTube](https://www.youtube.com/watch?v=_Khk5-_v5u0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=29) |
-| 3      | CA-23  | Modelos lineales 3 - Regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/10-3/linear_models_3.html) | [YouTube](https://www.youtube.com/watch?v=ipO3seGtsvw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=30) |
-| 3      | CA-24  | Modelos lineales 4 - Inferencia en regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/10-4/linear_models_4.html) | [YouTube](https://www.youtube.com/watch?v=aHh4AufEd10&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=31) |
-| 4      | TP-6  | Modelos lineales | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp6-modelos_lineales/modelos_lineales_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp6-modelos_lineales/modelos_lineales_TP_solved.html)| [YouTube](https://www.youtube.com/watch?v=Vd7l3btHBYU&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=32) |
-| 4      | CA-25  | Modelos lineales de efectos mixtos 1 - Datos jerárquicos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=juYglyzFCVA&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=33) |
-| 4      | CA-26  | Modelos lineales de efectos mixtos 2 - Efectos mixtos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=QGVwlNiU9Po&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=34)
-| 4      | TP-7  | Modelos lineales de efecto mixtos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2021/Practicos/tp7-modelos_mixtos/mixtos.html)| [YouTube](https://www.youtube.com/watch?v=8k93z5u31bQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=36) |
+| 1      | CS-1  | Presentación del curso | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=EfR9VmDnDIg&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=2) |
+| 1      | CA-1  | ¿Por qué R?                                    | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-1/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=SfQ9JF72GvI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=3) |
+| 1      | CA-2  | Bienvenidos al Tidyverse                        | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-2/Tidyverse_1.html) | [YouTube](https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4) |
+| 1      | CA-3  | El Tidyverse en acción                          | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-3/Tidyverse_2.html) | [YouTube](https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5) |
+| 1      | CA-4  | Visualización de datos: *A New Hope*            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-1/ggplot_1.html) | [YouTube](https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6) |
+| 1      | CA-5  | Visualización de datos: *Ggplot2 Strikes Back*  | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-2/ggplot_2.html) | [YouTube](https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7) |
+| 1      | CA-6  | Visualización de datos: *Return of the Ggplot2* | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-3/ggplot_3.html) | [YouTube](https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8) |
+| 1      | TP-1  | *tidyverse*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html) | [CS-2 Parte 1](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) |
+| 1      | TP-2  | *ggplot2*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html) | [CS-2 Parte 2](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) |
+| 1      | CA-7  | Variables Aleatorias 1: ¿Qué es una variable aleatoria?            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/1-Que_es_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=x6JxeKelBdc&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=11) |
+| 1      | CA-8  | Variables Aleatorias 2: Tipos de variables aleatorias       | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/2-Tipos_de_variables_aleatorias.pdf) | [YouTube](https://www.youtube.com/watch?v=Q6w_iehCLFs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=12) |
+| 1      | CA-9  | Variables Aleatorias 3: ¿Cómo se mide una variable aleatoria?               | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/3-Como_se_mide_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=yhYqr_cHoaQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=13) |
+| 1      | CA-10  | Variables Aleatorias 4-1: Distribución binomial     | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=ec-HextxRJ8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=14) |
+| 1      | CA-11  | Variables Aleatorias 4-2: Distribución uniforme                            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=7dfvFh-Gdaw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=15) |
+| 1      | CA-12  | Variables Aleatorias 4-3: La distribución Gaussiana (o normal)              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=UdunP_Epfec&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=16) |
+| 1      | TP-3  | Variables discretas y continuas | [Discretas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_discretas.html) [Continuas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_continuas.html) | [YouTube](https://www.youtube.com/watch?v=CFOAxG78H3A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=17) |
+| 2      | CA-13  | Exploración de datos                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-1/EDA_1.html) | [YouTube](https://www.youtube.com/watch?v=oPfr0X0qGG4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=18) |
+| 2      | CA-14  | Cómo detectar outliers y qué hacer con ellos              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-2/EDA_2.html) | [YouTube](https://www.youtube.com/watch?v=gwMIpYw_J5A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=19) |
+| 2      | TP-4  | Análisis exploratorio de datos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp4-EDA/EDA_TP.html) | [YouTube](https://www.youtube.com/watch?v=w-9xmWBb_R4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=24) |
+| 2      | CA-15  | Prueba de hipótesis 1                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=Yp12ptJ_luY&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=20) |
+| 2      | CA-16  | Prueba de hipótesis 2 - Para qué sirve? | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=LHZWAOwJ2gM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=21) |
+| 2      | CA-17  | Prueba de hipótesis 3 - Relación entre estadística crítica y nivel de significancia (alfa) | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=hhF9G-2uilQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=22) |
+| 2      | CA-18  | Prueba de hipótesis 4 - P-values | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=o4M96nLVn0A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=23) |
+| 2      | CA-19  | Prueba de hipótesis 5 - Potencia estadística | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=fpO0B7ZlHSE&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=25) |
+| 2      | CA-20  | Prueba de hipótesis 6 - Tamaño del efecto | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=EfL0o20VA-w&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=26) |
+| 3      | TP5  | Prueba de hipótesis | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp5-hipotesis/hipotesis.html)  | [YouTube](https://www.youtube.com/watch?v=bGkpOmXoOto&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=27) |
+| 3      | CA-21  | Modelos lineales 1 - Regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-1/linear_models_1.html) | [YouTube](https://www.youtube.com/watch?v=w6khKjCO1E0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=28) |
+| 3      | CA-22  | Modelos lineales 2 - Inferencia en regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-2/linear_models_2.html) | [YouTube](https://www.youtube.com/watch?v=_Khk5-_v5u0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=29) |
+| 3      | CA-23  | Modelos lineales 3 - Regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-3/linear_models_3.html) | [YouTube](https://www.youtube.com/watch?v=ipO3seGtsvw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=30) |
+| 3      | CA-24  | Modelos lineales 4 - Inferencia en regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-4/linear_models_4.html) | [YouTube](https://www.youtube.com/watch?v=aHh4AufEd10&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=31) |
+| 4      | TP-6  | Modelos lineales | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp6-modelos_lineales/modelos_lineales_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp6-modelos_lineales/modelos_lineales_TP_solved.html)| [YouTube](https://www.youtube.com/watch?v=Vd7l3btHBYU&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=32) |
+| 4      | CA-25  | Modelos lineales de efectos mixtos 1 - Datos jerárquicos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=juYglyzFCVA&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=33) |
+| 4      | CA-26  | Modelos lineales de efectos mixtos 2 - Efectos mixtos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=QGVwlNiU9Po&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=34)
+| 4      | TP-7  | Modelos lineales de efecto mixtos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp7-modelos_mixtos/mixtos.html)| [YouTube](https://www.youtube.com/watch?v=8k93z5u31bQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=36) |
 
 (**CS**) Clase Sincrónica 
 
@@ -151,7 +150,7 @@ Pueden bajar la versión gratuita de RStudio del siguiente [link](https://www.rs
 
 ### Clonado del repositorio
 
-GitHub es una plataforma de desarrollo colaborativo que permite alojar proyectos utilizando el control de versiones Git. Para ustedes es simplemente el lugar donde van a encontrar todos los materiales del curso. Para bajar todos los materiales de una sola vez, lo que deben hacer es abrir el RStudio e ir a la solapa *File*/*New Project*. Una vez ahí deben seleccionar *Version Control* y luego *Git*. Seleccionen la carpeta donde quieran descargar el material del curso y (acá viene lo nuevo) en *Repository URL* copien esta URL `https://github.com/spiousas/Inferencia_con_R_UNQ2021.git`.
+GitHub es una plataforma de desarrollo colaborativo que permite alojar proyectos utilizando el control de versiones Git. Para ustedes es simplemente el lugar donde van a encontrar todos los materiales del curso. Para bajar todos los materiales de una sola vez, lo que deben hacer es abrir el RStudio e ir a la solapa *File*/*New Project*. Una vez ahí deben seleccionar *Version Control* y luego *Git*. Seleccionen la carpeta donde quieran descargar el material del curso y (acá viene lo nuevo) en *Repository URL* copien esta URL `https://github.com/spiousas/Inferencia_con_R_UNQ2022.git`.
 
 Una de las ventajas de estar conectado al repositorio es que cualquier cambio que hagamos en el repositorio de GitHub ustedes lo pueden actualizar en su carpeta local yendo a *Tools*/*Version Control*/*Pull Branches*.
 
