--- a/Practicos/tp2-ggplot2/ggplot2_TP.Rmd
+++ b/Practicos/tp2-ggplot2/ggplot2_TP.Rmd
@@ -2,7 +2,10 @@
 title: "TP2 - *ggplot2* olímpico"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
-output: rmdformats::robobook
+output: 
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
