--- a/Practicos/tp1-tidyverse/tidyverse_TP.Rmd
+++ b/Practicos/tp1-tidyverse/tidyverse_TP.Rmd
@@ -3,7 +3,9 @@ title: "TP1 - *tidyverse* olímpico"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::robobook
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
