TP3 andando y con favicon

--- a/Practicos/tp3-variables_discretas/variables_continuas.Rmd
+++ b/Practicos/tp3-variables_discretas/variables_continuas.Rmd
@@ -1,9 +1,11 @@
 ---
-title: "TP3 - Variables discretas"
+title: "TP3 - Variables continuas"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::robobook
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
