--- a/Practicos/tp4-EDA/EDA_TP.Rmd
+++ b/Practicos/tp4-EDA/EDA_TP.Rmd
@@ -3,7 +3,9 @@ title: "TP4 - Análisis exploratorio de datos"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::robobook
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
