--- a/Practicos/tp5-hipotesis/hipotesis.Rmd
+++ b/Practicos/tp5-hipotesis/hipotesis.Rmd
@@ -3,7 +3,9 @@ title: "TP5 - Prueba de hipótesis"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::robobook
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
