--- a/Practicos/tp6-modelos_lineales/modelos_lineales_TP_solved.Rmd
+++ b/Practicos/tp6-modelos_lineales/modelos_lineales_TP_solved.Rmd
@@ -3,7 +3,9 @@ title: "TP6 - Modelos lineales"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::robobook
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
