--- a/Practicos/tp7-modelos_mixtos/mixtos.Rmd
+++ b/Practicos/tp7-modelos_mixtos/mixtos.Rmd
@@ -3,7 +3,9 @@ title: "TP7 - Modelos de efectos mixtos"
 author: "Spiousas - Etchemendy"
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::robobook
+  rmdformats::robobook:
+    includes:
+      in_header: "../favicon.html" 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
