--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -33,45 +33,89 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 ## Cronograma 📆
 
-| Semana | Clase | Título                                | Documento                                              | Vídeo                                           |
-| ------ | ----- | ------------------------------------- | :-------------------------------------------------------: | :-------------------------------------------: |
-| 0      | CA-1  | Introducción a R y Rstudio                     | No hay                             | [YouTube](https://www.youtube.com/watch?v=NOwcUHaqlyI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=1) |
-| 1      | CS-1  | Presentación del curso | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=EfR9VmDnDIg&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=2) |
-| 1      | CA-1  | ¿Por qué R?                                    | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-1/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=SfQ9JF72GvI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=3) |
-| 1      | CA-2  | Bienvenidos al Tidyverse                        | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-2/Tidyverse_1.html) | [YouTube](https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4) |
-| 1      | CA-3  | El Tidyverse en acción                          | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-3/Tidyverse_2.html) | [YouTube](https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5) |
-| 1      | CA-4  | Visualización de datos: *A New Hope*            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-1/ggplot_1.html) | [YouTube](https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6) |
-| 1      | CA-5  | Visualización de datos: *Ggplot2 Strikes Back*  | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-2/ggplot_2.html) | [YouTube](https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7) |
-| 1      | CA-6  | Visualización de datos: *Return of the Ggplot2* | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-3/ggplot_3.html) | [YouTube](https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8) |
-| 1      | TP-1  | *tidyverse*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html) | [CS-2 Parte 1](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) |
-| 1      | TP-2  | *ggplot2*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html) | [CS-2 Parte 2](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) |
-| 1      | CA-7  | Variables Aleatorias 1: ¿Qué es una variable aleatoria?            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/1-Que_es_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=x6JxeKelBdc&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=11) |
-| 1      | CA-8  | Variables Aleatorias 2: Tipos de variables aleatorias       | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/2-Tipos_de_variables_aleatorias.pdf) | [YouTube](https://www.youtube.com/watch?v=Q6w_iehCLFs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=12) |
-| 1      | CA-9  | Variables Aleatorias 3: ¿Cómo se mide una variable aleatoria?               | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/3-Como_se_mide_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=yhYqr_cHoaQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=13) |
-| 1      | CA-10  | Variables Aleatorias 4-1: Distribución binomial     | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=ec-HextxRJ8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=14) |
-| 1      | CA-11  | Variables Aleatorias 4-2: Distribución uniforme                            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=7dfvFh-Gdaw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=15) |
-| 1      | CA-12  | Variables Aleatorias 4-3: La distribución Gaussiana (o normal)              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=UdunP_Epfec&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=16) |
-| 1      | TP-3  | Variables discretas y continuas | [Discretas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_discretas.html) [Continuas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_continuas.html) | [YouTube](https://www.youtube.com/watch?v=CFOAxG78H3A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=17) |
-| 2      | CA-13  | Exploración de datos                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-1/EDA_1.html) | [YouTube](https://www.youtube.com/watch?v=oPfr0X0qGG4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=18) |
-| 2      | CA-14  | Cómo detectar outliers y qué hacer con ellos              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-2/EDA_2.html) | [YouTube](https://www.youtube.com/watch?v=gwMIpYw_J5A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=19) |
-| 2      | TP-4  | Análisis exploratorio de datos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp4-EDA/EDA_TP.html) | [YouTube](https://www.youtube.com/watch?v=w-9xmWBb_R4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=24) |
-| 2      | CA-15  | Prueba de hipótesis 1                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=Yp12ptJ_luY&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=20) |
-| 2      | CA-16  | Prueba de hipótesis 2 - Para qué sirve? | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=LHZWAOwJ2gM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=21) |
-| 2      | CA-17  | Prueba de hipótesis 3 - Relación entre estadística crítica y nivel de significancia (alfa) | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=hhF9G-2uilQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=22) |
-| 2      | CA-18  | Prueba de hipótesis 4 - P-values | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=o4M96nLVn0A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=23) |
-| 2      | CA-19  | Prueba de hipótesis 5 - Potencia estadística | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=fpO0B7ZlHSE&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=25) |
-| 2      | CA-20  | Prueba de hipótesis 6 - Tamaño del efecto | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=EfL0o20VA-w&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=26) |
-| 3      | TP5  | Prueba de hipótesis | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp5-hipotesis/hipotesis.html)  | [YouTube](https://www.youtube.com/watch?v=bGkpOmXoOto&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=27) |
-| 3      | CA-21  | Modelos lineales 1 - Regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-1/linear_models_1.html) | [YouTube](https://www.youtube.com/watch?v=w6khKjCO1E0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=28) |
-| 3      | CA-22  | Modelos lineales 2 - Inferencia en regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-2/linear_models_2.html) | [YouTube](https://www.youtube.com/watch?v=_Khk5-_v5u0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=29) |
-| 3      | CA-23  | Modelos lineales 3 - Regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-3/linear_models_3.html) | [YouTube](https://www.youtube.com/watch?v=ipO3seGtsvw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=30) |
-| 3      | CA-24  | Modelos lineales 4 - Inferencia en regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-4/linear_models_4.html) | [YouTube](https://www.youtube.com/watch?v=aHh4AufEd10&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=31) |
-| 4      | TP-6  | Modelos lineales | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp6-modelos_lineales/modelos_lineales_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp6-modelos_lineales/modelos_lineales_TP_solved.html)| [YouTube](https://www.youtube.com/watch?v=Vd7l3btHBYU&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=32) |
-| 4      | CA-25  | Modelos lineales de efectos mixtos 1 - Datos jerárquicos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=juYglyzFCVA&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=33) |
-| 4      | CA-26  | Modelos lineales de efectos mixtos 2 - Efectos mixtos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=QGVwlNiU9Po&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=34)
-| 4      | TP-7  | Modelos lineales de efecto mixtos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp7-modelos_mixtos/mixtos.html)| [YouTube](https://www.youtube.com/watch?v=8k93z5u31bQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=36) |
+### Unidad 1
 
-(**CS**) Clase Sincrónica 
+* **Semana 0: Introducción a R: Bienvenido al Tidyverse! `r ji("baby")`**
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Introducción a R y Rstudio    | No hay                             | [YouTube](https://www.youtube.com/watch?v=NOwcUHaqlyI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=1) |
+
+* **Semana 1: Visualización de datos con R `r ji("painter")`** 
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Presentación del curso | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/Presentacion_curso/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=EfR9VmDnDIg&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=2) |
+| ¿Por qué R?                                    | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-1/Presentacion_de_R.html) | [YouTube](https://www.youtube.com/watch?v=SfQ9JF72GvI&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=3) |
+| Bienvenidos al Tidyverse                        | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-2/Tidyverse_1.html) | [YouTube](https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4) |
+| El Tidyverse en acción                          | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-3/Tidyverse_2.html) | [YouTube](https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5) |
+| Visualización de datos: *A New Hope*            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-1/ggplot_1.html) | [YouTube](https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6) |
+| Visualización de datos: *Ggplot2 Strikes Back*  | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-2/ggplot_2.html) | [YouTube](https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7) |
+| Visualización de datos: *Return of the Ggplot2* | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-3/ggplot_3.html) | [YouTube](https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8) |
+| *tidyverse*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html) | [CS-2 Parte 1](https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9) |
+| *ggplot2*  Olímpico | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html) | [CS-2 Parte 2](https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10) |
+
+### Unidad 2
+
+* **Semana 2: Revisando conceptos de probabilidad y estadística: Aleatoriedad y otros temas aleatorios `r ji("dice")`**
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Variables Aleatorias 1: ¿Qué es una variable aleatoria?            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/1-Que_es_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=x6JxeKelBdc&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=11) |
+| Variables Aleatorias 2: Tipos de variables aleatorias       | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/2-Tipos_de_variables_aleatorias.pdf) | [YouTube](https://www.youtube.com/watch?v=Q6w_iehCLFs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=12) |
+| Variables Aleatorias 3: ¿Cómo se mide una variable aleatoria?               | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/3-Como_se_mide_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=yhYqr_cHoaQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=13) |
+| Variables Aleatorias 4-1: Distribución binomial     | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=ec-HextxRJ8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=14) |
+| Variables Aleatorias 4-2: Distribución uniforme                            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=7dfvFh-Gdaw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=15) |
+| Variables Aleatorias 4-3: La distribución Gaussiana (o normal)              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=UdunP_Epfec&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=16) |
+| Variables discretas y continuas | [Discretas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_discretas.html) [Continuas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_continuas.html) | [YouTube](https://www.youtube.com/watch?v=CFOAxG78H3A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=17) |
+
+* **Semana 3: Revisando conceptos de probabilidad y estadística: Distribuciones estadísticas `r ji("stats")`**
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Exploración de datos                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-1/EDA_1.html) | [YouTube](https://www.youtube.com/watch?v=oPfr0X0qGG4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=18) |
+| Cómo detectar outliers y qué hacer con ellos              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-2/EDA_2.html) | [YouTube](https://www.youtube.com/watch?v=gwMIpYw_J5A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=19) |
+| Análisis exploratorio de datos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp4-EDA/EDA_TP.html) | [YouTube](https://www.youtube.com/watch?v=w-9xmWBb_R4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=24) |
+
+### Unidad 3
+
+* **Semana 4: Análisis exploratorio de datos `r ji("thinking")`**
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Prueba de hipótesis 1                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=Yp12ptJ_luY&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=20) |
+| Prueba de hipótesis 2 - Para qué sirve? | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=LHZWAOwJ2gM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=21) |
+| Prueba de hipótesis 3 - Relación entre estadística crítica y nivel de significancia (alfa) | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf)  | [YouTube](https://www.youtube.com/watch?v=hhF9G-2uilQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=22) |
+| Prueba de hipótesis 4 - P-values | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=o4M96nLVn0A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=23) |
+| Prueba de hipótesis 5 - Potencia estadística | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=fpO0B7ZlHSE&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=25) |
+| Prueba de hipótesis 6 - Tamaño del efecto | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/8/NHST_p-values_effect-size.pdf) | [YouTube](https://www.youtube.com/watch?v=EfL0o20VA-w&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=26) |
+| Prueba de hipótesis | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp5-hipotesis/hipotesis.html)  | [YouTube](https://www.youtube.com/watch?v=bGkpOmXoOto&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=27) |
+
+* **Semana 5: Prueba de hipótesis y control de errores: Potencia estadística, qué es y qué NO ES un p-value, y por qué es saludable reportar effect sizes `r ji("computer")`** 
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Modelos lineales 1 - Regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-1/linear_models_1.html) | [YouTube](https://www.youtube.com/watch?v=w6khKjCO1E0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=28) |
+| Modelos lineales 2 - Inferencia en regresión lineal | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-2/linear_models_2.html) | [YouTube](https://www.youtube.com/watch?v=_Khk5-_v5u0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=29) |
+| Modelos lineales 3 - Regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-3/linear_models_3.html) | [YouTube](https://www.youtube.com/watch?v=ipO3seGtsvw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=30) |
+| Modelos lineales 4 - Inferencia en regresión múltiple | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/10-4/linear_models_4.html) | [YouTube](https://www.youtube.com/watch?v=aHh4AufEd10&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=31) |
+| Modelos lineales | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp6-modelos_lineales/modelos_lineales_TP.html) [Solución](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp6-modelos_lineales/modelos_lineales_TP_solved.html)| [YouTube](https://www.youtube.com/watch?v=Vd7l3btHBYU&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=32) |
+
+* **Semana 6: Modelos jerárquicos: Qué son y para qué sirven los famosos modelos lineales de efectos mixtos `r ji("fear")`**
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
+| Modelos lineales de efectos mixtos 1 - Datos jerárquicos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=juYglyzFCVA&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=33) |
+| Modelos lineales de efectos mixtos 2 - Efectos mixtos | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/11/modelos_mixtos.pdf) | [YouTube](https://www.youtube.com/watch?v=QGVwlNiU9Po&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=34)
+| Modelos lineales de efecto mixtos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp7-modelos_mixtos/mixtos.html)| [YouTube](https://www.youtube.com/watch?v=8k93z5u31bQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=36) |
+
+
+### Unidad 4
+
+* **Semana 8: Ciencia Abierta: Por qué, para qué y cómo `r ji("open")`**
+
+| Clase                 | Documento             | Vídeo                 |
+| --------------------- | --------------------- | --------------------- |
 
 (**CA**) Clase Asincrónica
 
@@ -107,30 +151,28 @@ Los temas que vamos a tratar en el curso son:
 
 ### Unidad 1
 
-* **Clase 1: Introducción a R: Bienvenido al Tidyverse! `r ji("baby")`** <br /> Introducción a R como herramienta de análisis de datos centrado en las librerías del Tidyverse (principalmente tidyR, dplyr y Purrr). Cómo leer, organizar, resumir y manipular datos experimentales para construir un insumo confiable y reproducible.
+* **Semana 0: Introducción a R: Bienvenido al Tidyverse! `r ji("baby")`** <br /> Introducción a R como herramienta de análisis de datos centrado en las librerías del Tidyverse (principalmente tidyR, dplyr y Purrr). Cómo leer, organizar, resumir y manipular datos experimentales para construir un insumo confiable y reproducible.
 
-* **Clase 2: Visualización de datos con R `r ji("painter")`** <br /> Como hacer gráficos que sean la envidia de tus colegas.
+* **Semana 1: Visualización de datos con R `r ji("painter")`** <br /> Como hacer gráficos que sean la envidia de tus colegas.
 Nociones básicas sobre el funcionamiento de ggplot2 (otra librería del Tidyverse). 
 
 ### Unidad 2
 
-* **Clase 3: Revisando conceptos de probabilidad y estadística: Aleatoriedad y otros temas aleatorios `r ji("dice")`** <br /> ¿Qué es una variable aleatoria? ¿De dónde surgen los comportamientos aleatorios en la naturaleza? ¿Cómo podemos medir y describir ese tipo de variables? Variables aleatorias categóricas, discretas y continuas. 
+* **Semana 2: Revisando conceptos de probabilidad y estadística: Aleatoriedad y otros temas aleatorios `r ji("dice")`** <br /> ¿Qué es una variable aleatoria? ¿De dónde surgen los comportamientos aleatorios en la naturaleza? ¿Cómo podemos medir y describir ese tipo de variables? Variables aleatorias categóricas, discretas y continuas. 
 
-* **Clase 4: Revisando conceptos de probabilidad y estadística: Distribuciones estadísticas `r ji("stats")`** <br /> ¿Qué es una distribución estadística? ¿Para qué se usa? ¿Cuál es la relación entre una variable aleatoria y una distribución estadística? Conceptos de densidad de probabilidad y probabilidad acumulada.
+* **Semana 3: Revisando conceptos de probabilidad y estadística: Distribuciones estadísticas `r ji("stats")`** <br /> ¿Qué es una distribución estadística? ¿Para qué se usa? ¿Cuál es la relación entre una variable aleatoria y una distribución estadística? Conceptos de densidad de probabilidad y probabilidad acumulada.
 
 ### Unidad 3
 
-* **Clase 5: Análisis exploratorio de datos `r ji("thinking")`** <br /> Caracterización de un conjunto de datos guiada mediante una hipótesis o no. Media, desvío estándar, varianza y error estándar muestrales. Coeficientes de correlación.
+* **Semana 4: Análisis exploratorio de datos `r ji("thinking")`** <br /> Caracterización de un conjunto de datos guiada mediante una hipótesis o no. Media, desvío estándar, varianza y error estándar muestrales. Coeficientes de correlación.
 
-* **Clase 6: Prueba de hipótesis y control de errores: Potencia estadística, qué es y qué NO ES un p-value, y por qué es saludable reportar effect sizes `r ji("computer")`** <br /> Una de las prácticas estadísticas más extendidas son las pruebas de hipótesis (aún cuando no corresponden). En esta clase vamos a diseccionar su anatomía y explorar sus componentes básicos, como los tipos de errores, la potencia estadística, el p-value y los effect size. Intentaremos resumir las discusiones actuales alrededor del tan amado y, a la vez, odiado p-value.
+* **Semana 5: Prueba de hipótesis y control de errores: Potencia estadística, qué es y qué NO ES un p-value, y por qué es saludable reportar effect sizes `r ji("computer")`** <br /> Una de las prácticas estadísticas más extendidas son las pruebas de hipótesis (aún cuando no corresponden). En esta clase vamos a diseccionar su anatomía y explorar sus componentes básicos, como los tipos de errores, la potencia estadística, el p-value y los effect size. Intentaremos resumir las discusiones actuales alrededor del tan amado y, a la vez, odiado p-value.
 
-* **Clase 7: Modelos jerárquicos: Qué son y para qué sirven los famosos modelos lineales de efectos mixtos `r ji("fear")`** <br /> Un p<0.05 en una prueba de hipótesis parece ser el santo grial científico al que todos queremos llegar, pero no siempre se trata de una metodología correcta y puede llevar a grandes errores de interpretación. En esta clase vamos a introducir a los alumnos en una de las técnicas de modelado (una muy popular) para tratar con análisis exploratorios.
+* **Semana 6 y 7: Modelos jerárquicos: Qué son y para qué sirven los famosos modelos lineales de efectos mixtos `r ji("fear")`** <br /> Un p<0.05 en una prueba de hipótesis parece ser el santo grial científico al que todos queremos llegar, pero no siempre se trata de una metodología correcta y puede llevar a grandes errores de interpretación. En esta clase vamos a introducir a los alumnos en una de las técnicas de modelado (una muy popular) para tratar con análisis exploratorios.
 
 ### Unidad 4
 
-* **Clase 8: Ciencia Abierta: Por qué y para qué `r ji("open")`** <br /> La Ciencia Abierta es un movimiento que tiene como objetivo hacer la investigación científica y su divulgación accesible en todo nivel. Se trata de un esfuerzo por construir una ciencia transparente y accesible en base a trabajos colaborativos y herramientas para compartir.
-
-* **Clase 9: Ciencia Abierta: Cómo `r ji("open")`** <br /> En esta clase exploraremos las opciones para la publicación eficiente y transparente tanto de nuestros datos como de nuestros códigos de análisis (por ejemplo, OSF, Github, etc.). También, como una consecuencia de la ciencia abierta vamos a hacer una mención a los pre-registros y por qué son importantes, cuándo son factibles y cómo llevarlos adelante.
+* **Semana 8: Ciencia Abierta: Por qué, para qué y cómo `r ji("open")`** <br /> La Ciencia Abierta es un movimiento que tiene como objetivo hacer la investigación científica y su divulgación accesible en todo nivel. Se trata de un esfuerzo por construir una ciencia transparente y accesible en base a trabajos colaborativos y herramientas para compartir. También exploraremos las opciones para la publicación eficiente y transparente tanto de nuestros datos como de nuestros códigos de análisis (por ejemplo, OSF, Github, etc.). También, como una consecuencia de la ciencia abierta vamos a hacer una mención a los pre-registros y por qué son importantes, cuándo son factibles y cómo llevarlos adelante.
 
 ### Unidad 5
 
